[tool.poetry]
name = "longest-word"
version = "0.1.0"
description = ""
authors = ["Renan Moises <renanfmoises@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
pytest = "^8.2.0"
pylint = "^3.1.0"
requests = "^2.26.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
